--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first ever github repo</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
+    <div>
+        <h3>My first website</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum doloribus odit vitae eos rerum voluptates delectus adipisci dolore ullam nam quisquam, sequi maxime perferendis. Ea non odio ipsum aut placeat.</p>
+    </div>
     
 </body>
 </html>
