added 3 new blogs

--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
         <h3>My first website</h3>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum doloribus odit vitae eos rerum voluptates delectus adipisci dolore ullam nam quisquam, sequi maxime perferendis. Ea non odio ipsum aut placeat.</p>
     </div>
+    <div>
+        <h3>My 2nd website</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum doloribus odit vitae eos rerum voluptates delectus adipisci dolore ullam nam quisquam, sequi maxime perferendis. Ea non odio ipsum aut placeat.</p>
+    </div>
+    <div>
+        <h3>My 3rd website</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum doloribus odit vitae eos rerum voluptates delectus adipisci dolore ullam nam quisquam, sequi maxime perferendis. Ea non odio ipsum aut placeat.</p>
+    </div>
+    <div>
+        <h3>My 4th website</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum doloribus odit vitae eos rerum voluptates delectus adipisci dolore ullam nam quisquam, sequi maxime perferendis. Ea non odio ipsum aut placeat.</p>
+    </div>
     
 </body>
 </html>
